--- a/styles/contato.css
+++ b/styles/contato.css
@@ -26,15 +26,36 @@
   border-radius: 24px;
   width: 90%;
   color: var(--azul);
-  
 }
 
 .contato__email::placeholder {
-    font-family: var(--fonte-pricipal);
-    color: var(--azul);
-    background: url("/img/Email.svg") no-repeat;
-    padding-left: 2em;
-    
-    
+  font-family: var(--fonte-pricipal);
+  color: var(--azul);
+  background: url("/img/Email.svg") no-repeat 0.2em center;
+  padding-left: 2em;
+}
+@media screen and (min-width:1024px ) {
+  .contato {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .contato__titulo {
+    font-size: 24px;
+  }
+  .contato__descrição{
+    margin-right: 1em;
+    width: 30%;
+  }
+  .contato__email {
+    width: 30%;
+  }
+  
+  
+}
 
+@media screen and (min-width:1728px ){
+  .contato {
+    padding: 3em 20vh;
+  }
 }
